--- a/revamp/styles/nav-bar.css
+++ b/revamp/styles/nav-bar.css
@@ -48,13 +48,15 @@ body {
     margin: 0.3%;
     border-radius: 6px;
     padding: 0.3%;
-    transition: 0.2s;
     color: var(--white);
     text-decoration: none;
+    transition: all 0.2s;
+    /* --webkit-transition: font-size 0.2s linear, color 0.2s linear; */
 }
 
 #menu a:hover {
     color: var(--light-blue);
+    transform: scale(1.02);
 }
 
 .section-title {
@@ -81,8 +83,10 @@ body {
 .section-title-bg {
     position: absolute;
     width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
+    object-fit: cover;
     z-index: -20;
     transform: translate3d(0, 0, -20px);
     -webkit-transform: translate3d(0, 0, -20px);
@@ -93,7 +97,9 @@ a:link { /* Let's have all external links orange, and internal blue */
     padding: 1px;
     border-radius: 2px;    
     text-decoration: none;
-    transition: 0.2s;
+    /* --webkit-transition: font-size 0.2s linear, color 0.2s linear; */
+    transition: all 0.2s;
+    /* transform: scale(0.98); */
     color: var(--white);
 }
 
@@ -103,12 +109,10 @@ a:visited {
 
 a.external:hover {
     color: var(--orange);
-    font-size: 102%;
 }
 
 a:hover {
     color: var(--light-blue);
-    font-size: 102%;
 }
 
 .section-body {
